--- a/seq2seq_RNNoise.ipynb
+++ b/seq2seq_RNNoise.ipynb
@@ -44,7 +44,8 @@
     }
    ],
    "source": [
-    "#!pip install keras==2.1.6\n",
+    "weights_file_name = 'rnn_models/s2s-rnn-weights.hdf5'\n",
+    "!pip install keras==2.1.6\n",
     "#!ls"
    ]
   },
@@ -126,7 +127,7 @@
     "def input_not_before_end(list_of_marks):\n",
     "    return ('INPUT' not in list_of_marks[:-1])\n",
     "\n",
-    "def load_seq_dataset():\n",
+    "def load_seq_dataset(path):\n",
     "    seq_length = SEQ_LENGTH\n",
     "    input_marks = INPUT_MARKS\n",
     "    output_marks = OUTPUT_MARKS\n",
@@ -134,7 +135,7 @@
     "    assert(input_not_before_end(output_marks))\n",
     "    assert(input_not_before_end(input_marks))\n",
     "    \n",
-    "    dataset_path = os.path.join(DATA_PATH)\n",
+    "    dataset_path = os.path.join(path)\n",
     "\n",
     "    #try:      \n",
     "    with np.load(dataset_path) as data:\n",
@@ -203,28 +204,29 @@
    },
    "outputs": [],
    "source": [
-    "X, Y, peakPValueX, peakPValueY, peakBinaryX, peakBinaryY = load_seq_dataset()\n",
+    "# Training dataset\n",
+    "X, Y, peakPValueX, peakPValueY, peakBinaryX, peakBinaryY = load_seq_dataset(DATA_PATH)\n",
     "\n",
     "if zero_out_non_bins:\n",
     "    peakPValueX = peakPValueX * peakBinaryX\n",
     "    peakPValueY = peakPValueY * peakBinaryY \n",
     "\n",
-    "def sq2p_process_X(X):\n",
+    "def sq2sq_process_X(X):\n",
     "    return X\n",
     "\n",
-    "def sq2p_process_Y(Y):\n",
+    "def sq2sq_process_Y(Y):\n",
     "    '''mid = (SEQ_LENGTH - 1) / 2\n",
     "    mid = int(mid)\n",
     "    return Y[:, mid:mid+1, :]'''\n",
     "    return Y\n",
     "    \n",
     "    \n",
-    "X = sq2p_process_X(X)\n",
-    "Y = sq2p_process_Y(Y)\n",
-    "peakPValueX = sq2p_process_X(peakPValueX)\n",
-    "peakPValueY = sq2p_process_Y(peakPValueY)\n",
-    "peakBinaryX = sq2p_process_X(peakBinaryX)\n",
-    "peakBinaryY = sq2p_process_Y(peakBinaryY)    "
+    "X = sq2sq_process_X(X)\n",
+    "Y = sq2sq_process_Y(Y)\n",
+    "peakPValueX = sq2sq_process_X(peakPValueX)\n",
+    "peakPValueY = sq2sq_process_Y(peakPValueY)\n",
+    "peakBinaryX = sq2sq_process_X(peakBinaryX)\n",
+    "peakBinaryY = sq2sq_process_Y(peakBinaryY)   "
    ]
   },
   {
@@ -405,9 +407,8 @@
    "source": [
     "from keras.callbacks import ModelCheckpoint, EarlyStopping\n",
     "\n",
-    "seq2point_weight_bin = 's2q-rnn'\n",
     "bin_checkpointer = ModelCheckpoint(\n",
-    "    filepath=os.path.join('.', '%s-weights.hdf5'%seq2point_weight_bin), \n",
+    "    filepath=os.path.join('.', weights_file_name), \n",
     "    verbose=1, \n",
     "    save_best_only=True)\n",
     "\n",
@@ -447,7 +448,7 @@
     "    # Noise Spectral Estimation\n",
     "    noise_gru = GRU(\n",
     "      48, \n",
-    "      activation='relu', \n",
+    "      activation='tanh', \n",
     "      recurrent_activation='sigmoid', \n",
     "      return_sequences=True, \n",
     "      name='noise_gru'\n",
@@ -457,7 +458,7 @@
     "    denoise_input = keras.layers.concatenate([noise_gru, main_input])\n",
     "    denoise_gru = GRU(\n",
     "      96, \n",
-    "      activation='relu', \n",
+    "      activation='tanh', \n",
     "      recurrent_activation='sigmoid', \n",
     "      return_sequences=True, \n",
     "      name='denoise_gru'\n",
@@ -484,7 +485,7 @@
     "\n",
     "    peak_gru = GRU(\n",
     "      24, \n",
-    "      activation='relu', \n",
+    "      activation='tanh', \n",
     "      recurrent_activation='sigmoid', \n",
     "      return_sequences=True, \n",
     "      name='peak_gru'\n",
@@ -495,16 +496,6 @@
     "      activation='sigmoid', \n",
     "      name='peak_output'\n",
     "    )(peak_gru)\n",
-    "    '''\n",
-    "    peak_output = keras.layers.Conv1D(\n",
-    "        filters=len(OUTPUT_MARKS),\n",
-    "        kernel_size=SEQ_LENGTH,\n",
-    "        strides=1,\n",
-    "        padding='same',\n",
-    "        activation='sigmoid'\n",
-    "    )(peak_dense)\n",
-    "    '''\n",
-    "\n",
     "    model = Model(inputs=main_input, outputs=[denoise_output, peak_output])\n",
     "\n",
     "    return model"
@@ -628,30 +619,18 @@
      "text": [
       "('X-shape:', (10000, 1001, 6))\n",
       "('Y-shape:', (10000, 1001, 1))\n",
-      "('pY-shape:', (10000, 1001, 1))\n",
-      "Train on 9500 samples, validate on 500 samples\n",
-      "Epoch 1/10\n",
-      "1100/9500 [==>...........................] - ETA: 1:33:28 - loss: 2.7923 - denoise_output_loss: 2.1098 - peak_output_loss: 0.6825"
+      "('pY-shape:', (10000, 1001, 1))\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-37542dc3e301>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m              \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNB_EPOCH\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m              \u001b[0mvalidation_split\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mVALID_SPLIT\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m              batch_size=BATCH_SIZE)\n\u001b[0m",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/keras/engine/training.pyc\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, **kwargs)\u001b[0m\n\u001b[1;32m   1703\u001b[0m                               \u001b[0minitial_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minitial_epoch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1704\u001b[0m                               \u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1705\u001b[0;31m                               validation_steps=validation_steps)\n\u001b[0m\u001b[1;32m   1706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1707\u001b[0m     def evaluate(self, x=None, y=None,\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/keras/engine/training.pyc\u001b[0m in \u001b[0;36m_fit_loop\u001b[0;34m(self, f, ins, out_labels, batch_size, epochs, verbose, callbacks, val_f, val_ins, shuffle, callback_metrics, initial_epoch, steps_per_epoch, validation_steps)\u001b[0m\n\u001b[1;32m   1234\u001b[0m                         \u001b[0mins_batch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mins_batch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1235\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1236\u001b[0;31m                     \u001b[0mouts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mins_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1237\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mouts\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1238\u001b[0m                         \u001b[0mouts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mouts\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/keras/backend/theano_backend.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   1237\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1238\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuple\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1239\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1240\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1241\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/theano/compile/function_module.pyc\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    901\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    902\u001b[0m             \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 903\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0moutput_subset\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    904\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_subset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moutput_subset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    905\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/theano/scan_module/scan_op.pyc\u001b[0m in \u001b[0;36mrval\u001b[0;34m(p, i, o, n, allow_gc)\u001b[0m\n\u001b[1;32m    961\u001b[0m         def rval(p=p, i=node_input_storage, o=node_output_storage, n=node,\n\u001b[1;32m    962\u001b[0m                  allow_gc=allow_gc):\n\u001b[0;32m--> 963\u001b[0;31m             \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    964\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    965\u001b[0m                 \u001b[0mcompute_map\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/theano/scan_module/scan_op.pyc\u001b[0m in \u001b[0;36mp\u001b[0;34m(node, args, outs)\u001b[0m\n\u001b[1;32m    950\u001b[0m                                                 \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    951\u001b[0m                                                 \u001b[0mouts\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 952\u001b[0;31m                                                 self, node)\n\u001b[0m\u001b[1;32m    953\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mImportError\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtheano\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgof\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcmodule\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMissingGXX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    954\u001b[0m             \u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mtheano/scan_module/scan_perform.pyx\u001b[0m in \u001b[0;36mtheano.scan_module.scan_perform.perform (/root/.theano/compiledir_Linux-4.4--generic-x86_64-with-Ubuntu-16.04-xenial-x86_64-2.7.12-64/scan_perform/mod.cpp:7110)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/theano/tensor/type.pyc\u001b[0m in \u001b[0;36mvalue_zeros\u001b[0;34m(self, shape)\u001b[0m\n\u001b[1;32m    550\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    551\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 552\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0mvalue_zeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    553\u001b[0m         \"\"\"\n\u001b[1;32m    554\u001b[0m         \u001b[0mCreate\u001b[0m \u001b[0man\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0mndarray\u001b[0m \u001b[0mfull\u001b[0m \u001b[0mof\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nrnn_model.fit(X, [Y, peakBinaryY], \\n             callbacks=[bin_checkpointer, bin_earlystopper],\\n             epochs=NB_EPOCH,\\n             validation_split=VALID_SPLIT,\\n             batch_size=BATCH_SIZE)\\n             '"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -659,28 +638,14 @@
     "print('Y-shape:',Y.shape)\n",
     "print('pY-shape:',peakBinaryY.shape)\n",
     "\n",
+    "'''\n",
     "rnn_model.fit(X, [Y, peakBinaryY], \n",
     "             callbacks=[bin_checkpointer, bin_earlystopper],\n",
     "             epochs=NB_EPOCH,\n",
     "             validation_split=VALID_SPLIT,\n",
-    "             batch_size=BATCH_SIZE)"
+    "             batch_size=BATCH_SIZE)\n",
+    "             '''"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "autoexec": {
-      "startup": false,
-      "wait_interval": 0
-     }
-    },
-    "colab_type": "code",
-    "id": "7WFFr6xDRkfR"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
