--- a/seq2seq_RNNoise_0002_Evaluation.ipynb
+++ b/seq2seq_RNNoise_0002_Evaluation.ipynb
@@ -23,7 +23,7 @@
     "DATA_PATH = 'GM12878.npz'\n",
     "EVAL_PATH = 'GM18526.npz'\n",
     "zero_out_non_bins = True\n",
-    "weights_path = 'rnn_models/s2s-rnn-0001-weights.hdf5'"
+    "weights_path = 'rnn_models/s2s-rnn-0002-weights.hdf5'"
    ]
   },
   {
@@ -205,7 +205,7 @@
     "    # Noise Spectral Estimation\n",
     "    noise_gru = GRU(\n",
     "      48, \n",
-    "      activation='relu', \n",
+    "      activation='tanh', \n",
     "      recurrent_activation='sigmoid', \n",
     "      return_sequences=True, \n",
     "      name='noise_gru'\n",
@@ -215,7 +215,7 @@
     "    denoise_input = keras.layers.concatenate([noise_gru, main_input])\n",
     "    denoise_gru = GRU(\n",
     "      96, \n",
-    "      activation='relu', \n",
+    "      activation='tanh', \n",
     "      recurrent_activation='sigmoid', \n",
     "      return_sequences=True, \n",
     "      name='denoise_gru'\n",
@@ -226,13 +226,23 @@
     "      activation='relu', \n",
     "      name='denoise_output'\n",
     "    )(denoise_gru)\n",
+    "    \n",
+    "    '''\n",
+    "    denoise_output = keras.layers.Conv1D(\n",
+    "        filters=len(OUTPUT_MARKS),\n",
+    "        kernel_size=SEQ_LENGTH,\n",
+    "        strides=1,\n",
+    "        padding='same',\n",
+    "        activation='relu'\n",
+    "    )(denoise_dense)\n",
+    "    '''\n",
     "\n",
     "    # Peak ? Nope\n",
     "    peak_input = keras.layers.concatenate([denoise_gru, main_input])  \n",
     "\n",
     "    peak_gru = GRU(\n",
-    "      24, \n",
-    "      activation='relu', \n",
+    "      64, \n",
+    "      activation='tanh', \n",
     "      recurrent_activation='sigmoid', \n",
     "      return_sequences=True, \n",
     "      name='peak_gru'\n",
@@ -243,6 +253,16 @@
     "      activation='sigmoid', \n",
     "      name='peak_output'\n",
     "    )(peak_gru)\n",
+    "    '''\n",
+    "    peak_output = keras.layers.Conv1D(\n",
+    "        filters=len(OUTPUT_MARKS),\n",
+    "        kernel_size=SEQ_LENGTH,\n",
+    "        strides=1,\n",
+    "        padding='same',\n",
+    "        activation='sigmoid'\n",
+    "    )(peak_dense)\n",
+    "    '''\n",
+    "\n",
     "    model = Model(inputs=main_input, outputs=[denoise_output, peak_output])\n",
     "\n",
     "    return model"
@@ -351,14 +371,14 @@
       "concatenate_2 (Concatenate)     (None, 1001, 102)    0           denoise_gru[0][0]                \n",
       "                                                                 main_input[0][0]                 \n",
       "__________________________________________________________________________________________________\n",
-      "peak_gru (GRU)                  (None, 1001, 24)     9144        concatenate_2[0][0]              \n",
+      "peak_gru (GRU)                  (None, 1001, 64)     32064       concatenate_2[0][0]              \n",
       "__________________________________________________________________________________________________\n",
       "denoise_output (Dense)          (None, 1001, 1)      97          denoise_gru[0][0]                \n",
       "__________________________________________________________________________________________________\n",
-      "peak_output (Dense)             (None, 1001, 1)      25          peak_gru[0][0]                   \n",
+      "peak_output (Dense)             (None, 1001, 1)      65          peak_gru[0][0]                   \n",
       "==================================================================================================\n",
-      "Total params: 60,674\n",
-      "Trainable params: 60,674\n",
+      "Total params: 83,634\n",
+      "Trainable params: 83,634\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -414,9 +434,9 @@
      "output_type": "stream",
      "text": [
       "Denoising Eval\n",
-      "MSE 0.229 (true var 1.422), pearsonR 0.916\n",
+      "MSE 0.245 (true var 1.422), pearsonR 0.912\n",
       "Peak Eval\n",
-      "AUC 0.957; AUPRC 0.896\n"
+      "AUC 0.954; AUPRC 0.890\n"
      ]
     }
    ],
@@ -430,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -520,17 +540,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./scripts/convertWigToBigWig.sh: line 13: wigToBigWig: command not found\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
