--- a/seq2seq_RNNoise_0003_Evaluation.ipynb
+++ b/seq2seq_RNNoise_0003_Evaluation.ipynb
@@ -23,7 +23,7 @@
     "DATA_PATH = 'GM12878.npz'\n",
     "EVAL_PATH = 'GM18526.npz'\n",
     "zero_out_non_bins = True\n",
-    "weights_path = 'rnn_models/s2s-rnn-0001-weights.hdf5'"
+    "weights_path = 'rnn_models/s2s-rnn-0003-weights.hdf5'"
    ]
   },
   {
@@ -204,45 +204,90 @@
     "    main_input = Input(shape=(SEQ_LENGTH, len(INPUT_MARKS)), name='main_input')\n",
     "    # Noise Spectral Estimation\n",
     "    noise_gru = GRU(\n",
-    "      48, \n",
-    "      activation='relu', \n",
+    "      22, \n",
+    "      activation='tanh', \n",
     "      recurrent_activation='sigmoid', \n",
     "      return_sequences=True, \n",
     "      name='noise_gru'\n",
     "    )(main_input)\n",
+    "    \n",
+    "    noise_cnn = keras.layers.Conv1D(\n",
+    "        filters=12,\n",
+    "        kernel_size=16,\n",
+    "        strides=1,\n",
+    "        padding='same',\n",
+    "        activation='tanh'\n",
+    "    )(noise_gru)\n",
+    "    \n",
     "\n",
     "    # Spectral Subtraction\n",
-    "    denoise_input = keras.layers.concatenate([noise_gru, main_input])\n",
+    "    denoise_input = keras.layers.concatenate([noise_gru, noise_cnn ,main_input])\n",
     "    denoise_gru = GRU(\n",
-    "      96, \n",
-    "      activation='relu', \n",
+    "      24, \n",
+    "      activation='tanh', \n",
     "      recurrent_activation='sigmoid', \n",
     "      return_sequences=True, \n",
     "      name='denoise_gru'\n",
     "    )(denoise_input)\n",
-    "        \n",
+    "    \n",
+    "    denoise_cnn = keras.layers.Conv1D(\n",
+    "        filters=16,\n",
+    "        kernel_size=24,\n",
+    "        strides=1,\n",
+    "        padding='same',\n",
+    "        activation='tanh'\n",
+    "    )(denoise_gru)\n",
+    "     \n",
     "    denoise_output = Dense(\n",
     "      1, \n",
     "      activation='relu', \n",
     "      name='denoise_output'\n",
-    "    )(denoise_gru)\n",
+    "    )(denoise_cnn)\n",
+    "    \n",
+    "    '''\n",
+    "    denoise_output = keras.layers.Conv1D(\n",
+    "        filters=len(OUTPUT_MARKS),\n",
+    "        kernel_size=SEQ_LENGTH,\n",
+    "        strides=1,\n",
+    "        padding='same',\n",
+    "        activation='relu'\n",
+    "    )(denoise_dense)\n",
+    "    '''\n",
     "\n",
     "    # Peak ? Nope\n",
-    "    peak_input = keras.layers.concatenate([denoise_gru, main_input])  \n",
+    "    peak_input = keras.layers.concatenate([denoise_gru, denoise_cnn, main_input])  \n",
     "\n",
     "    peak_gru = GRU(\n",
     "      24, \n",
-    "      activation='relu', \n",
+    "      activation='tanh', \n",
     "      recurrent_activation='sigmoid', \n",
     "      return_sequences=True, \n",
     "      name='peak_gru'\n",
     "    )(peak_input)\n",
     "    \n",
+    "    peak_cnn = keras.layers.Conv1D(\n",
+    "        filters=16,\n",
+    "        kernel_size=24,\n",
+    "        strides=1,\n",
+    "        padding='same',\n",
+    "        activation='tanh'\n",
+    "    )(peak_gru)\n",
+    "       \n",
     "    peak_output = Dense(\n",
     "      1, \n",
     "      activation='sigmoid', \n",
     "      name='peak_output'\n",
-    "    )(peak_gru)\n",
+    "    )(peak_cnn)\n",
+    "    '''\n",
+    "    peak_output = keras.layers.Conv1D(\n",
+    "        filters=len(OUTPUT_MARKS),\n",
+    "        kernel_size=SEQ_LENGTH,\n",
+    "        strides=1,\n",
+    "        padding='same',\n",
+    "        activation='sigmoid'\n",
+    "    )(peak_dense)\n",
+    "    '''\n",
+    "\n",
     "    model = Model(inputs=main_input, outputs=[denoise_output, peak_output])\n",
     "\n",
     "    return model"
@@ -341,24 +386,32 @@
       "==================================================================================================\n",
       "main_input (InputLayer)         (None, 1001, 6)      0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "noise_gru (GRU)                 (None, 1001, 48)     7920        main_input[0][0]                 \n",
+      "noise_gru (GRU)                 (None, 1001, 22)     1914        main_input[0][0]                 \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_1 (Concatenate)     (None, 1001, 54)     0           noise_gru[0][0]                  \n",
+      "conv1d_1 (Conv1D)               (None, 1001, 12)     4236        noise_gru[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_1 (Concatenate)     (None, 1001, 40)     0           noise_gru[0][0]                  \n",
+      "                                                                 conv1d_1[0][0]                   \n",
       "                                                                 main_input[0][0]                 \n",
       "__________________________________________________________________________________________________\n",
-      "denoise_gru (GRU)               (None, 1001, 96)     43488       concatenate_1[0][0]              \n",
+      "denoise_gru (GRU)               (None, 1001, 24)     4680        concatenate_1[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_2 (Concatenate)     (None, 1001, 102)    0           denoise_gru[0][0]                \n",
+      "conv1d_2 (Conv1D)               (None, 1001, 16)     9232        denoise_gru[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_2 (Concatenate)     (None, 1001, 46)     0           denoise_gru[0][0]                \n",
+      "                                                                 conv1d_2[0][0]                   \n",
       "                                                                 main_input[0][0]                 \n",
       "__________________________________________________________________________________________________\n",
-      "peak_gru (GRU)                  (None, 1001, 24)     9144        concatenate_2[0][0]              \n",
+      "peak_gru (GRU)                  (None, 1001, 24)     5112        concatenate_2[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "denoise_output (Dense)          (None, 1001, 1)      97          denoise_gru[0][0]                \n",
+      "conv1d_3 (Conv1D)               (None, 1001, 16)     9232        peak_gru[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "peak_output (Dense)             (None, 1001, 1)      25          peak_gru[0][0]                   \n",
+      "denoise_output (Dense)          (None, 1001, 1)      17          conv1d_2[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "peak_output (Dense)             (None, 1001, 1)      17          conv1d_3[0][0]                   \n",
       "==================================================================================================\n",
-      "Total params: 60,674\n",
-      "Trainable params: 60,674\n",
+      "Total params: 34,440\n",
+      "Trainable params: 34,440\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -414,9 +467,9 @@
      "output_type": "stream",
      "text": [
       "Denoising Eval\n",
-      "MSE 0.229 (true var 1.422), pearsonR 0.916\n",
+      "MSE 0.211 (true var 1.422), pearsonR 0.924\n",
       "Peak Eval\n",
-      "AUC 0.957; AUPRC 0.896\n"
+      "AUC 0.967; AUPRC 0.922\n"
      ]
     }
    ],
@@ -430,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -520,17 +573,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./scripts/convertWigToBigWig.sh: line 13: wigToBigWig: command not found\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
